Revision history for Perl extension Net::Libwebsockets:

0.03
- BREAKING CHANGE: on_text() and on_binary() callbacks now receive
  the courier object as first parameter. This helps to avoid memory
  leaks without needing weaken() or other tricks.
- BUG FIX: State X::Tiny as prerequisite.
- BUG FIX: If the client close()s without a close code, the
  promise-resolution close code is CLOSE_STATUS_NO_STATUS, not 0.
- Add Mojolicious support
- Add WebSocket close code constants
- Add tests

0.02 Mon 18 Oct 2021
- Documentation tweaks
- Fix context creation :)
- Fix build on non-MULTIPLICITY Perls

0.01 Sat 16 Oct 2021
- Initial release