@@ -4,6 +4,7 @@ Revision history for Perl extension Net::Libwebsockets:
 - BREAKING CHANGE: on_text() and on_binary() callbacks now receive
   the courier object as first parameter. This helps to avoid memory
   leaks without needing weaken() or other tricks.
+- BUG FIX: Memory-handling error with logger objects.
 - BUG FIX: State X::Tiny as prerequisite.
 - BUG FIX: If the client close()s without a close code, the
   promise-resolution close code is CLOSE_STATUS_NO_STATUS, not 0.
